tests/errors/error_type_simple.wyn
fn main() {
    var x: int = "hello";
    print(x);
}